0project/k8s-demo/traefik-demo/IngressRouter-crd.yaml

# whoami-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`whoami.com`)
      kind: Rule
      services:
        - name: whoami
          port: 80
